# cuKCF-tracking-sys

./: .gitignore  KCF-sys-report-5.21.pptx  README.md  analysis.txt  clean.sh  setup.py  test.py  ~$大作业题目.docx  大作业题目.docx
KCF/: __init__.py  diff_index.txt  eval_interface.py  fhog.py  fhog_cu.py  fhog_v5.py  kcf.py  kcf_v2.py  kcf_v3.py  kcf_v4.py  kcf_v5.py  kcf_v5_plus.py  mkcf.py  plot.py  precision_curve_results.npy  profile_output.prof  profile_output.txt  trace_src.py  tracker_results.txt
KCF/results/: profile_output.prof  profile_output.txt
csrc/: CMakeLists.txt  ComplexMat.cpp  bindings.cpp  cnfeat.cpp  cnfeat.hpp  fhog.cu  fhog.hpp  gradientMex.cpp  gradientMex.h  kernel.cu  libMkcfup.cpp  libMkcfup.h  main.cpp  params.h  sse.hpp  wrapper.cpp  wrapper.h  wrappers.hpp
docs/: test.tex
server/: kcf.py  server.py  server_main.py
server/templates/: index.html
